# tutorial-meson

./: .gitignore  LICENSE  README.md  meson.build
.github/workflows/: meson-test.yml
assets/: tutorialMeson.ui
lib-saludo/: meson.build
lib-saludo/include/: meson.build  saludo.hpp
lib-saludo/include/saludo/: saludo.hpp
lib-saludo/private/: building_lib.hpp
lib-saludo/src/: meson.build  saludo.cpp
saludo/: meson.build
saludo/include/: app.hpp  appWindow.hpp
saludo/src/: app.cpp  appWindow.cpp  source.cpp
test/: meson.build  saludo-test.cpp
